--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3911,26 +3911,26 @@ kg
                         "4": "1"
                     },
                     "icon": {
-                        "1": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_momoka.jpg",
-                        "4": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_150_5.jpg"
+                        "1": "../../image_sp/ui/episode/epi_button_movie_momoka.jpg",
+                        "4": "../../image_sp/ui/episode/epi_button_movie_150_5.jpg"
                     },
                     "movie_name_voice": {
-                        "1": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png",
-                        "4": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"
+                        "1": "../../image_sp/ui/episode/epi_button_moviename_cute_early.png",
+                        "4": "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"
                     }
                 }, {
                     "story_id": "114",
                     "story_title": "アイドルプロデュース the 4th Anniversary",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/114/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/114/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/114/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/114/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/114/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "../../idol_story/movie_play/114/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["../../idol_story/sound_play/114/1/idol_gallery/__hash_card_id__", 
+                                  "../../idol_story/sound_play/114/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_114_1.jpg", 
-                             "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_114_2.jpg"],
-                    "movie_name_voice": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_special.png", 
-                                         "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_special_2.png"]
+                    "icon": ["../../image_sp/ui/episode/epi_button_movie_114_1.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_114_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_special.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_special_2.png"]
                 }, {
                     "story_id": "69",
                     "story_title": "イタズラ小悪魔バレンタイン",
@@ -3939,60 +3939,60 @@ kg
                         "5": "0"
                     },
                     "flash_path": {
-                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/69/3/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "5": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/69/6/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "2": "../../idol_story/movie_play/69/3/idol_gallery--idol_detail--__hash_card_id__--2",
+                        "5": "../../idol_story/movie_play/69/6/idol_gallery--idol_detail--__hash_card_id__--2"
                     },
                     "voice_url": {
-                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/69/3/idol_gallery/__hash_card_id__",
-                        "5": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/69/6/idol_gallery/__hash_card_id__"
+                        "2": "../../idol_story/sound_play/69/3/idol_gallery/__hash_card_id__",
+                        "5": "../../idol_story/sound_play/69/6/idol_gallery/__hash_card_id__"
                     },
                     "open_flag": {
                         "2": "1",
                         "5": "1"
                     },
                     "icon": {
-                        "2": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_069_3.jpg",
-                        "5": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_069_6.jpg"
+                        "2": "../../image_sp/ui/episode/epi_button_movie_069_3.jpg",
+                        "5": "../../image_sp/ui/episode/epi_button_movie_069_6.jpg"
                     },
                     "movie_name": {
-                        "2": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png",
-                        "5": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"
+                        "2": "../../image_sp/ui/episode/epi_button_moviename_cute_early.png",
+                        "5": "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"
                     }
                 }];
                 idol.images = {
                     "bg": {
                         "1": {
-                            "cu": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_1_cu.jpg",
-                            "co": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_1_co.jpg",
-                            "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_1_pa.jpg",
-                            "tr": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_f_pa.jpg"
+                            "cu": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_1_cu.jpg",
+                            "co": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_1_co.jpg",
+                            "pa": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_1_pa.jpg",
+                            "tr": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_f_pa.jpg"
                         },
                         "2": {
-                            "cu": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_2_cu.jpg",
-                            "co": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_2_co.jpg",
-                            "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_2_pa.jpg"
+                            "cu": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_2_cu.jpg",
+                            "co": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_2_co.jpg",
+                            "pa": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_2_pa.jpg"
                         },
                         "3": {
-                            "cu": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_3_cu.jpg",
-                            "co": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_3_co.jpg",
-                            "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_3_pa.jpg",
-                            "tr": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_f2_pa.jpg"
+                            "cu": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_3_cu.jpg",
+                            "co": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_3_co.jpg",
+                            "pa": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_3_pa.jpg",
+                            "tr": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_f2_pa.jpg"
                         },
                         "4": {
-                            "cu": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_4_cu.jpg",
-                            "co": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_4_co.jpg",
-                            "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/mypage_new/bg/bg_idol_reality_4_pa.jpg"
+                            "cu": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_4_cu.jpg",
+                            "co": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_4_co.jpg",
+                            "pa": "../../image_sp/ui/mypage_new/bg/bg_idol_reality_4_pa.jpg"
                         },
                         "5": {
-                            "cu": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_cute.jpg",
-                            "co": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_cool.jpg",
-                            "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_passion.jpg",
-                            "tr": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_trainer.jpg"
+                            "cu": "../../image_sp/ui/gallery/bg_sr_cute.jpg",
+                            "co": "../../image_sp/ui/gallery/bg_sr_cool.jpg",
+                            "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg",
+                            "tr": "../../image_sp/ui/gallery/bg_sr_trainer.jpg"
                         },
                         "6": {
-                            "cu": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_cute.jpg",
-                            "co": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_cool.jpg",
-                            "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_passion.jpg"
+                            "cu": "../../image_sp/ui/gallery/bg_sr_cute.jpg",
+                            "co": "../../image_sp/ui/gallery/bg_sr_cool.jpg",
+                            "pa": "../../image_sp/ui/gallery/bg_sr_passion.jpg"
                         }
                     },
                     "l": ["../../image_sp/card/l/momoka_01.jpg", 
@@ -4090,16 +4090,16 @@ kg
                                  "../../image_sp/card/l/momoka_24.jpg", 
                                  "../../image_sp/card/l/momoka_27.jpg", 
                                  "../../image_sp/card/l/momoka_28.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/7073bce2f3e2b4f05836245d7cead0c7.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/37906fa7434d6c760555c5a58ff2ac9c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/39ad78da70be52e1f7efb5a636ee7d84.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/203fea8d5570f9ccdb9c4bed8c5e0cc3.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/e2ab52cc826ae9735799063b1ef02ab2.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5d82fdb0f6789af95438a9677b73123c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/46351028a831c60ffa283dbd3483e44e.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/108c08141582e72f2e792c6587cbc3de.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/49af3fc73d38dd1646199a33033965c5.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/1443dc589f26e0bbfb089c1cdda9504b.jpg"],
+                                 "../../image_sp/card/l/momoka_29.jpg", 
+                                 "../../image_sp/card/l/momoka_30.jpg", 
+                                 "../../image_sp/card/l/momoka_31.jpg", 
+                                 "../../image_sp/card/l/momoka_32.jpg", 
+                                 "../../image_sp/card/l/momoka_33.jpg", 
+                                 "../../image_sp/card/l/momoka_34.jpg", 
+                                 "../../image_sp/card/l/momoka_35.jpg", 
+                                 "../../image_sp/card/l/momoka_36.jpg", 
+                                 "../../image_sp/card/l/momoka_37.jpg", 
+                                 "../../image_sp/card/l/momoka_38.jpg"],
                     "l_nosign_p": {
                         "6": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/9e47b6134fcc68ce03f1e646032535f6.jpg",
                         "7": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/188588430665ce152a5da1c7bef37766.jpg",
