--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -4101,38 +4101,38 @@ kg
                                  "../../image_sp/card/l/momoka_37.jpg", 
                                  "../../image_sp/card/l/momoka_38.jpg"],
                     "l_nosign_p": {
-                        "6": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_05.jpg",
-                        "7": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_06.jpg",
-                        "8": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_07.jpg",
-                        "9": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_08.jpg",
-                        "10": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_09.jpg",
-                        "11": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_10.jpg",
-                        "12": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_11.jpg",
-                        "13": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_12.jpg",
-                        "14": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_13.jpg",
-                        "15": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_14.jpg",
-                        "16": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_15.jpg",
-                        "17": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_16.jpg",
-                        "18": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_17.jpg",
-                        "19": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_18.jpg",
-                        "20": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_19.jpg",
-                        "21": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_20.jpg",
-                        "22": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_21.jpg",
-                        "23": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_22.jpg",
-                        "24": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_23.jpg",
-                        "25": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_24.jpg",
-                        "26": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_27.jpg",
-                        "27": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_28.jpg",
-                        "28": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_29.jpg",
-                        "29": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_30.jpg",
-                        "30": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_31.jpg",
-                        "31": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_32.jpg",
-                        "32": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_33.jpg",
-                        "33": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_34.jpg",
-                        "34": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_35.jpg",
-                        "35": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_36.jpg",
-                        "36": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_37.jpg",
-                        "37": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/momoka_38.jpg"
+                        "6": "../../image_sp/card_sign_no_p/l/momoka_05.jpg",
+                        "7": "../../image_sp/card_sign_no_p/l/momoka_06.jpg",
+                        "8": "../../image_sp/card_sign_no_p/l/momoka_07.jpg",
+                        "9": "../../image_sp/card_sign_no_p/l/momoka_08.jpg",
+                        "10": "../../image_sp/card_sign_no_p/l/momoka_09.jpg",
+                        "11": "../../image_sp/card_sign_no_p/l/momoka_10.jpg",
+                        "12": "../../image_sp/card_sign_no_p/l/momoka_11.jpg",
+                        "13": "../../image_sp/card_sign_no_p/l/momoka_12.jpg",
+                        "14": "../../image_sp/card_sign_no_p/l/momoka_13.jpg",
+                        "15": "../../image_sp/card_sign_no_p/l/momoka_14.jpg",
+                        "16": "../../image_sp/card_sign_no_p/l/momoka_15.jpg",
+                        "17": "../../image_sp/card_sign_no_p/l/momoka_16.jpg",
+                        "18": "../../image_sp/card_sign_no_p/l/momoka_17.jpg",
+                        "19": "../../image_sp/card_sign_no_p/l/momoka_18.jpg",
+                        "20": "../../image_sp/card_sign_no_p/l/momoka_19.jpg",
+                        "21": "../../image_sp/card_sign_no_p/l/momoka_20.jpg",
+                        "22": "../../image_sp/card_sign_no_p/l/momoka_21.jpg",
+                        "23": "../../image_sp/card_sign_no_p/l/momoka_22.jpg",
+                        "24": "../../image_sp/card_sign_no_p/l/momoka_23.jpg",
+                        "25": "../../image_sp/card_sign_no_p/l/momoka_24.jpg",
+                        "26": "../../image_sp/card_sign_no_p/l/momoka_27.jpg",
+                        "27": "../../image_sp/card_sign_no_p/l/momoka_28.jpg",
+                        "28": "../../image_sp/card_sign_no_p/l/momoka_29.jpg",
+                        "29": "../../image_sp/card_sign_no_p/l/momoka_30.jpg",
+                        "30": "../../image_sp/card_sign_no_p/l/momoka_31.jpg",
+                        "31": "../../image_sp/card_sign_no_p/l/momoka_32.jpg",
+                        "32": "../../image_sp/card_sign_no_p/l/momoka_33.jpg",
+                        "33": "../../image_sp/card_sign_no_p/l/momoka_34.jpg",
+                        "34": "../../image_sp/card_sign_no_p/l/momoka_35.jpg",
+                        "35": "../../image_sp/card_sign_no_p/l/momoka_36.jpg",
+                        "36": "../../image_sp/card_sign_no_p/l/momoka_37.jpg",
+                        "37": "../../image_sp/card_sign_no_p/l/momoka_38.jpg"
                     },
                     "l_noframe": [null, 
                                   null, 
