--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -4001,38 +4001,38 @@ kg
                           "../../image_sp/card/l/momoka_04.jpg", 
                           "../../image_sp/card/l/momoka_25.jpg", 
                           "../../image_sp/card/l/momoka_26.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/9e47b6134fcc68ce03f1e646032535f6.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/188588430665ce152a5da1c7bef37766.jpg", 
-                          "", 
-                          "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/fe8cd968bd4ee6c8beaa758e650eee5d.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/d31209b053eb49962fdea278ece7e26b.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/b7284bd572e970f7140cef7484d47e4e.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/fd5714748c23dee73f43176c8bd71f29.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/1db672f026cfc1e8a82037549477dccf.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/81fc62c6d3dc7b6dd9ae05f2c9df4d31.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/287d93a6b5dcebe0774cc8dead51c237.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/45e1c5533ba0e0a103511f58ee17f850.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/77155375be053699373b3e7271072d5b.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/ffc736f0dd52509c5bc4724e6829d693.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/7ec7a2ad5161e9618958f951fd4752e4.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/940e4561030b7cb18e6f6f1d612618b7.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/555df2682110f80cc57e2a745e812661.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/ee70a56e781ee96f461da009805f49a8.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f78ca58df1e12f7fdbed9f567a9dfdc0.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/d32d219a3c0ad6dc84734d1fc3f9f94e.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/8cc0137141db4ce048f0d92d2fe8b773.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/0e6f68a362d70c0272d2c0b78165c439.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/7073bce2f3e2b4f05836245d7cead0c7.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/37906fa7434d6c760555c5a58ff2ac9c.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/39ad78da70be52e1f7efb5a636ee7d84.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/203fea8d5570f9ccdb9c4bed8c5e0cc3.jpg",
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/e2ab52cc826ae9735799063b1ef02ab2.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/5d82fdb0f6789af95438a9677b73123c.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/46351028a831c60ffa283dbd3483e44e.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/108c08141582e72f2e792c6587cbc3de.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/49af3fc73d38dd1646199a33033965c5.jpg", 
-                          ""],
+                          "../../image_sp/card_sign_b/l/momoka_05.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_06.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_07.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_08.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_09.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_10.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_11.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_12.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_13.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_14.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_15.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_16.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_17.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_18.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_19.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_20.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_21.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_22.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_23.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_24.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_27.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_28.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_29.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_30.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_31.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_32.jpg",
+                          "../../image_sp/card_sign_b/l/momoka_33.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_34.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_35.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_36.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_37.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_38.jpg"],
                     "l_premium": {
                         "6": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/9e47b6134fcc68ce03f1e646032535f6.jpg",
                         "7": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_p/l/188588430665ce152a5da1c7bef37766.jpg",
