--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3807,90 +3807,90 @@ kg
                         "2": "1"
                     },
                     "flash_path": {
-                        "0": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/416/1/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/416/3/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "0": "../../idol_story/movie_play/416/1/idol_gallery--idol_detail--__hash_card_id__--2",
+                        "2": "../../idol_story/movie_play/416/3/idol_gallery--idol_detail--__hash_card_id__--2"
                     },
                     "voice_url": {
-                        "0": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/416/1/idol_gallery/__hash_card_id__",
-                        "2": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/416/3/idol_gallery/__hash_card_id__"
+                        "0": "../../idol_story/sound_play/416/1/idol_gallery/__hash_card_id__",
+                        "2": "../../idol_story/sound_play/416/3/idol_gallery/__hash_card_id__"
                     },
                     "open_flag": {
                         "0": "1",
                         "2": "1"
                     },
                     "icon": {
-                        "0": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg",
-                        "2": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_416_3.jpg"
+                        "0": "../../image_sp/ui/episode/base/015.jpg",
+                        "2": "../../image_sp/ui/episode/epi_button_movie_416_3.jpg"
                     },
                     "movie_name_voice": {
-                        "0": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png",
-                        "2": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"
+                        "0": "../../image_sp/ui/episode/epi_button_moviename_cute_early.png",
+                        "2": "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"
                     }
                 }, {
                     "story_id": "380",
                     "story_title": "ブルーミングシャイン",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/380/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/380/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/380/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/380/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/380/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "../../idol_story/movie_play/380/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["../../idol_story/sound_play/380/1/idol_gallery/__hash_card_id__", 
+                                  "../../idol_story/sound_play/380/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg", 
-                             "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_380_2.jpg"],
-                    "movie_name_voice": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png", 
-                                         "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"]
+                    "icon": ["../../image_sp/ui/episode/base/015.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_380_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "303",
                     "story_title": "アフタヌーンローズ",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/303/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/303/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/303/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/303/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/303/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "../../idol_story/movie_play/303/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["../../idol_story/sound_play/303/1/idol_gallery/__hash_card_id__", 
+                                  "../../idol_story/sound_play/303/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg", 
-                             "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_303_2.jpg"],
-                    "movie_name_voice": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png", 
-                                         "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"]
+                    "icon": ["../../image_sp/ui/episode/base/015.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_303_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "263",
                     "story_title": "綿雪の戯れ",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/263/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/263/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/263/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/263/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/263/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "../../idol_story/movie_play/263/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["../../idol_story/sound_play/263/1/idol_gallery/__hash_card_id__", 
+                                  "../../idol_story/sound_play/263/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg",
-                             "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_263_2.jpg"],
-                    "movie_name_voice": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png", 
-                                         "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"]
+                    "icon": ["../../image_sp/ui/episode/base/015.jpg",
+                             "../../image_sp/ui/episode/epi_button_movie_263_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "227",
                     "story_title": "ひと夏の華",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/227/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/227/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/227/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/227/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/227/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "../../idol_story/movie_play/227/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["../../idol_story/sound_play/227/1/idol_gallery/__hash_card_id__", 
+                                  "../../idol_story/sound_play/227/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg", 
-                             "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_227_2.jpg"],
-                    "movie_name_voice": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_early.png", 
-                                         "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_cute_late.png"]
+                    "icon": ["../../image_sp/ui/episode/base/015.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_227_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "190",
                     "story_title": "新春☆開運招福",
                     "voice_enable": ["0", "0"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/190/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/190/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/190/1/idol_gallery/__hash_card_id__", 
-                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/190/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/190/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "../../idol_story/movie_play/190/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["../../idol_story/sound_play/190/1/idol_gallery/__hash_card_id__", 
+                                  "../../idol_story/sound_play/190/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
-                    "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_190_1.jpg", 
-                             "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_190_2.jpg"],
-                    "movie_name": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_r_early.png", 
-                                   "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_moviename_r_late.png"]
+                    "icon": ["../../image_sp/ui/episode/epi_button_movie_190_1.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_190_2.jpg"],
+                    "movie_name": ["../../image_sp/ui/episode/epi_button_moviename_r_early.png", 
+                                   "../../image_sp/ui/episode/epi_button_moviename_r_late.png"]
                 }, {
                     "story_id": "150",
                     "story_title": "大はしゃぎ!夏のスクールプール",
